# ctane

./: CMakeLists.txt  breast-cancer-wisconsin.csv  main.cpp
algorithms/: baseminer.cpp  baseminer.h  ctane.cpp  ctane.h  fastcfd.cpp  fastcfd.h  minernode.cpp  minernode.h
data/: database.cpp  database.h  databasereader.cpp  databasereader.h  types.cpp  types.h
util/: output.h  prefixtree.h  setutil.cpp  setutil.h  stringutil.h
